- fixed navigation collapse - fixed cv overlapping

--- a/src/main/frontend/apps/webapp/src/styles.scss
+++ b/src/main/frontend/apps/webapp/src/styles.scss
@@ -25,6 +25,10 @@
   cursor: pointer;
 }
 
+.noBoxSizing {
+  box-sizing: unset;
+}
+
 /* ===========================
 Index Of css
 ========================== */
@@ -4060,7 +4064,7 @@ blockquote span {
     margin-bottom: 6px;
   }
   .navbar-collapse {
-    overflow: scroll;
+    overflow: hidden;
     height: 400px;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
